--- a/ielts_style.css
+++ b/ielts_style.css
@@ -20,7 +20,7 @@
   font-family: "Montserrat", sans-serif;
 }
 body {
-  background-image: url("usa.jpg"); /* суреттің жолы */
+  background-image: url("gaba.jpg"); /* суреттің жолы */
   background-size: cover;         /* толық жауып тұрады */
   background-position: center;    /* ортаға туралау */
   background-repeat: no-repeat;   /* қайталанбау */
