--- a/flex.css
+++ b/flex.css
@@ -105,6 +105,9 @@ header h1 {
 .student-info h2 {
   font-size: 2.5rem;
   margin-bottom: 10px;
+  background: linear-gradient(to right, var(--primary), var(--white));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .student-info p {
   font-size: 1.3rem;
