--- a/ielts_style.css
+++ b/ielts_style.css
@@ -58,7 +58,7 @@ header::before {
 }
 
 header h1 {
-  font-family: "Cormorant Unicase", serif;;
+  font-family: "Merriweather", serif;;
   font-size: 2.7rem;
   margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
