--- a/style.css
+++ b/style.css
@@ -122,10 +122,11 @@ header::before {
 }
 
 header h1 {
+  font-family: "Merriweather", serif;
   font-size: 3.0rem;
   margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-  font-weight: 800;
+  font-weight: 700;
   line-height: 1.2;
 }
 
