--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header h2 {
   display: flex;
   flex-direction: column;
   font-weight: 800;
-  font-size: 3.0rem;
+/*   font-size: 3.0rem; */
   margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
   font-weight: 800;
